Fixed the mobile caption bug too large :zap:

--- a/css/style.css
+++ b/css/style.css
@@ -928,7 +928,6 @@ IMAGES  +++++++++++++++++++++++++++++++++++++++++++++++++++++++****/
 
 .caption {
 	font-family: Verdana, sans-serif;
-	font-size: 10px;
 	float: left;
 	margin: 0;
 	padding: 0;
@@ -949,7 +948,7 @@ IMAGES  +++++++++++++++++++++++++++++++++++++++++++++++++++++++****/
 .caption span {
 	float: left;
 	margin: 0;
-	padding: 10px;
+	padding: 5px;
 	width: 100%;
 	color: #dedede;
 	background: #222;
@@ -962,10 +961,9 @@ IMAGES  +++++++++++++++++++++++++++++++++++++++++++++++++++++++****/
 
 .caption span strong {
 	font-weight: bold;
-	font-size: 11px;
+	font-size: 7px;
 	text-transform: uppercase;
 	display: block;
-	padding-bottom: 5px;
 }
 
 
